k8s/cert-manager.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-example-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager-example-01
  template:
    metadata:
      labels:
        app: cert-manager-example-01
    spec:
      containers:
      - name: cert-manager-example-01
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
          - name: http
            containerPort: 80
---

kind: Service
apiVersion: v1
metadata:
  name: cert-manager-example-01-svc
spec:
  selector:
    app: cert-manager-example-01
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name:  cert-manager-example-ingress-01
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-01
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: myingress.<YOUR_DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-manager-example-01-svc
                port:
                  number: 80
  tls:
    - hosts:
        - myingress.<YOUR_DOMAIN>
      secretName: prod-issuer-account-key-01
